<resources>
    <string name="app_name">SMS Analyzer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay">Pay</string>
    <string name="allow">allow</string>
    <string name="sms">SMS</string>
    <string name="sms_permission_desc">following permissions are required to analyze your sms data</string>
    <string name="permission_required">Permission required</string>
    <string name="view_full_details">View Full Details</string>
    <string name="total_expenses">Total Expenses: </string>
    <string name="total_income">Total Income:</string>
</resources>