<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DashboardFragment">

    <LinearLayout
        android:id="@+id/main_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="6dp"
        android:background="@android:color/white">

       <com.github.mikephil.charting.charts.PieChart
           android:id="@+id/pie_chart"
           android:layout_width="320dp"
           android:layout_height="320dp"
           android:layout_gravity="center_horizontal"
           android:layout_margin="16dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="24dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_expenses" />

                        <TextView
                            android:id="@+id/total_expenses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rs.00"
                            android:layout_marginStart="6dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_income" />

                        <TextView
                            android:id="@+id/total_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rs.00"
                            android:layout_marginStart="6dp"/>
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/ic_baseline_share"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_full_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="24dp"
        android:text="@string/view_full_details"
        android:textAllCaps="false" />
</FrameLayout>